[package]
name = "kalos"
version = "0.1.0"
authors = ["Tony Beta Lambda <tonybetalambda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
lazy_static = "1.4"
anyhow = "1.0.40"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }
